--- a/web_app/Dockerfile
+++ b/web_app/Dockerfile
@@ -8,7 +8,7 @@
 #CMD ["python3", "manage.py", "runserver", "0.0.0.0:8000"]
 
 FROM python:3.8-slim-buster AS base
-WORKDIR app/
+WORKDIR web_app/
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 
@@ -16,7 +16,7 @@ FROM base as src
 COPY . .
 
 FROM src as test
-COPY requirements.txt app/
+COPY requirements.txt web_app/
 RUN pip3 install -r requirements.txt
 RUN python3 manage.py test host.tests
 
