--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -8,17 +8,17 @@
 #CMD ["python3", "manage.py", "runserver", "0.0.0.0:8000"]
 
 FROM python:3.8-slim-buster AS base
-WORKDIR web_app/
-COPY requirements.txt requirements.txt
+WORKDIR /app
+COPY requirements.txt /app
 RUN pip3 install -r requirements.txt
 
 FROM base as src
-COPY . .
+COPY . /app
 
 FROM src as test
-COPY requirements.txt web_app/
-RUN pip3 install -r requirements.txt
-RUN python3 manage.py test host.tests
+COPY requirements.dev.txt /app
+RUN pip3 install -r requirements.dev.txt
+RUN python3 -m pytest
 
 FROM src as prod
 ENTRYPOINT ["python3"]
