--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -16,9 +16,9 @@ FROM base as src
 COPY . /app
 
 FROM src as test
-COPY requirements.dev.txt /app
-RUN pip3 install -r requirements.dev.txt
-RUN python3 -m pytest
+COPY requirements.txt /app
+RUN pip3 install -r requirements.txt
+RUN python3 manage.py test.host -v 2
 
 FROM src as prod
 ENTRYPOINT ["python3"]
