--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -18,7 +18,7 @@ COPY . /app
 FROM src as test
 COPY requirements.txt /app
 RUN pip3 install -r requirements.txt
-RUN python3 manage.py test.host -v 2
+RUN python3 manage.py test.host
 
 FROM src as prod
 ENTRYPOINT ["python3"]
