fixed hips2fits error, keep cutout size to 0.1 degrees, more than that causes a time out on their server

--- a/app/host/data/survey_metadata.yml
+++ b/app/host/data/survey_metadata.yml
@@ -3,113 +3,182 @@
   pixel_size_arcsec: 1.0
   magnitude_zero_point: 20.4871
   image_pixel_units: 'counts/sec'
+  test_ra_deg: 120.0
+  test_dec_deg: -60.0
+  download_method: 'hips'
 2MASS_J:
   hips_id: 'CDS/P/2MASS/J'
   pixel_size_arcsec: 1.0
   magnitude_zero_point: 20.9044
   image_pixel_units: 'counts/sec'
+  test_ra_deg: 120.0
+  test_dec_deg: -60.0
+  download_method: 'hips'
 2MASS_K:
   hips_id: 'CDS/P/2MASS/K'
   pixel_size_arcsec: 1.0
   magnitude_zero_point: 19.9757
   image_pixel_units: 'counts/sec'
+  test_ra_deg: 120.0
+  test_dec_deg: -60.0
+  download_method: 'hips'
 WISE_W1:
   hips_id: 'CDS/P/WISE/W1'
   pixel_size_arcsec: 2.75
   magnitude_zero_point: 20.752
   image_pixel_units: 'counts/sec'
+  test_ra_deg: 120.0
+  test_dec_deg: -60.0
+  download_method: 'hips'
 WISE_W2:
   hips_id: 'CDS/P/WISE/W2'
   pixel_size_arcsec: 2.75
   magnitude_zero_point: 19.596
   image_pixel_units: 'counts/sec'
+  test_ra_deg: 120.0
+  test_dec_deg: -60.0
+  download_method: 'hips'
 WISE_W3:
   hips_id: 'CDS/P/WISE/W3'
   pixel_size_arcsec: 2.75
   magnitude_zero_point: 17.800
   image_pixel_units: 'counts/sec'
+  test_ra_deg: 120.0
+  test_dec_deg: -60.0
+  download_method: 'hips'
 WISE_W4:
   hips_id: 'CDS/P/WISE/W4'
   pixel_size_arcsec: 5.5
   magnitude_zero_point: 12.945
   image_pixel_units: 'counts/sec'
+  test_ra_deg: 120.0
+  test_dec_deg: -60.0
+  download_method: 'hips'
 GALEX_FUV:
   hips_id: 'CDS/P/GALEXGR6/AIS/FUV'
   pixel_size_arcsec: 1.5
   magnitude_zero_point: 18.82
   image_pixel_units: 'counts/sec'
+  test_ra_deg: 120.0
+  test_dec_deg: -60.0
+  download_method: 'hips'
 GALEX_NUV:
   hips_id: 'CDS/P/GALEXGR6/AIS/NUV'
   pixel_size_arcsec: 1.5
   magnitude_zero_point: 20.08
   image_pixel_units: 'counts/sec'
+  test_ra_deg: 120.0
+  test_dec_deg: -60.0
+  download_method: 'hips'
 PanSTARRS_g:
   hips_id: 'CDS/P/PanSTARRS/DR1/g'
   pixel_size_arcsec: 0.26
   magnitude_zero_point: 25.0
   image_pixel_units: 'counts'
+  test_ra_deg: 120.0
+  test_dec_deg: -60.0
+  download_method: 'custom'
 PanSTARRS_r:
   hips_id: 'CDS/P/PanSTARRS/DR1/r'
   pixel_size_arcsec: 0.26
   magnitude_zero_point: 25.0
   image_pixel_units: 'counts'
+  test_ra_deg: 120.0
+  test_dec_deg: -60.0
+  download_method: 'custom'
 PanSTARRS_i:
   hips_id: 'CDS/P/PanSTARRS/DR1/i'
   pixel_size_arcsec: 0.26
   magnitude_zero_point: 25.0
   image_pixel_units: 'counts'
+  test_ra_deg: 120.0
+  test_dec_deg: -60.0
+  download_method: 'custom'
 PanSTARRS_z:
   hips_id: 'CDS/P/PanSTARRS/DR1/z'
   pixel_size_arcsec: 0.26
   magnitude_zero_point: 25.0
   image_pixel_units: 'counts'
+  test_ra_deg: 120.0
+  test_dec_deg: -60.0
+  download_method: 'custom'
 PanSTARRS_y:
   hips_id: 'CDS/P/PanSTARRS/DR1/y'
   pixel_size_arcsec: 0.26
   magnitude_zero_point: 25.0
   image_pixel_units: 'counts'
+  test_ra_deg: 120.0
+  test_dec_deg: -60.0
+  download_method: 'custom'
 SDSS_i:
   hips_id: 'CDS/P/SDSS9/i'
   pixel_size_arcsec: 0.29296875
   magnitude_zero_point: 22.5
   image_pixel_units: ''
+  test_ra_deg: 120.0
+  test_dec_deg: -60.0
+  download_method: 'hips'
 SDSS_r:
   hips_id: 'CDS/P/SDSS9/r'
   pixel_size_arcsec: 0.29296875
   magnitude_zero_point: 22.5
   image_pixel_units: ''
+  test_ra_deg: 120.0
+  test_dec_deg: -60.0
+  download_method: 'hips'
 SDSS_u:
   hips_id: 'CDS/P/SDSS9/u'
   pixel_size_arcsec: 0.29296875
   magnitude_zero_point: 22.5
   image_pixel_units: ''
+  test_ra_deg: 120.0
+  test_dec_deg: -60.0
+  download_method: 'hips'
 SDSS_z:
   hips_id: 'CDS/P/SDSS9/z'
   pixel_size_arcsec: 0.29296875
   magnitude_zero_point: 22.5
   image_pixel_units: ''
+  test_ra_deg: 120.0
+  test_dec_deg: -60.0
+  download_method: 'hips'
 DES_Y:
   hips_id: 'CDS/P/DES-DR1/Y'
   pixel_size_arcsec: 0.2637
   magnitude_zero_point:
   image_pixel_units: ''
+  test_ra_deg: 120.0
+  test_dec_deg: -60.0
+  download_method: 'hips'
 DES_g:
   hips_id: 'CDS/P/DES-DR1/g'
   pixel_size_arcsec: 0.2637
   magnitude_zero_point: 22.5
   image_pixel_units: ''
+  test_ra_deg: 120.0
+  test_dec_deg: -60.0
+  download_method: 'hips'
 DES_r:
   hips_id: 'CDS/P/DES-DR1/r'
   pixel_size_arcsec: 0.2637
   magnitude_zero_point: 22.5
   image_pixel_units: ''
+  test_ra_deg: 120.0
+  test_dec_deg: -60.0
+  download_method: 'hips'
 DES_i:
   hips_id: 'CDS/P/DES-DR1/i'
   pixel_size_arcsec: 0.2637
   magnitude_zero_point: 22.5
   image_pixel_units: ''
+  test_ra_deg: 120.0
+  test_dec_deg: -60.0
+  download_method: 'hips'
 DES_z:
   hips_id: 'CDS/P/DES-DR1/z'
   pixel_size_arcsec: 0.2637
   magnitude_zero_point: 22.5
   image_pixel_units: ''
+  test_ra_deg: 120.0
+  test_dec_deg: -60.0
+  download_method: 'hips'
