added catalog photometry download support

--- a/app/host/data/catalog_metadata.yml
+++ b/app/host/data/catalog_metadata.yml
@@ -5,6 +5,8 @@
   ra: RAJ2000
   dec: DEJ2000
   id: 2MASX
+  test_ra_deg: 3.2348333
+  test_dec_deg: 22.1002750
 2MASS_J_extended_source:
   vizier_id: VII/233
   mag: J.e
@@ -12,6 +14,8 @@
   ra: RAJ2000
   dec: DEJ2000
   id: 2MASX
+  test_ra_deg: 3.2348333
+  test_dec_deg: 22.1002750
 2MASS_K_extended_source:
   vizier_id: VII/233
   mag: K.e
@@ -19,6 +23,8 @@
   ra: RAJ2000
   dec: DEJ2000
   id: 2MASX
+  test_ra_deg: 3.2348333
+  test_dec_deg: 22.1002750
 WISE_W1_ALLWISE:
   vizier_id: II/328
   mag: W1mag
@@ -26,6 +32,8 @@ WISE_W1_ALLWISE:
   ra: RAJ2000
   dec: DEJ2000
   id: AllWISE
+  test_ra_deg: 114.6055417
+  test_dec_deg: 21.5771667
 WISE_W2_ALLWISE:
   vizier_id: II/328
   mag: W2mag
@@ -33,6 +41,8 @@ WISE_W2_ALLWISE:
   ra: RAJ2000
   dec: DEJ2000
   id: AllWISE
+  test_ra_deg: 114.6055417
+  test_dec_deg: 21.5771667
 WISE_W3_ALLWISE:
   vizier_id: II/328
   mag: W3mag
@@ -40,6 +50,8 @@ WISE_W3_ALLWISE:
   ra: RAJ2000
   dec: DEJ2000
   id: AllWISE
+  test_ra_deg: 114.6055417
+  test_dec_deg: 21.5771667
 WISE_W4_ALLWISE:
   vizier_id: II/328
   mag: W4mag
@@ -47,6 +59,8 @@ WISE_W4_ALLWISE:
   ra: RAJ2000
   dec: DEJ2000
   id: AllWISE
+  test_ra_deg: 114.6055417
+  test_dec_deg: 21.5771667
 GALEX_FUV_source:
   vizier_id: II/335
   mag: FUV.a
@@ -54,6 +68,8 @@ GALEX_FUV_source:
   ra: RAJ2000
   dec: DEJ2000
   id: objid
+  test_ra_deg: 114.6055417
+  test_dec_deg: 21.5751472
 GALEX_NUV_source:
   vizier_id: II/335
   mag: NUV.a
@@ -61,6 +77,8 @@ GALEX_NUV_source:
   ra: RAJ2000
   dec: DEJ2000
   id: objid
+  test_ra_deg: 114.6055417
+  test_dec_deg: 21.5751472
 Panstarrs_g_dr1:
   vizier_id: II/349
   mag: gKmag
@@ -68,6 +86,8 @@ Panstarrs_g_dr1:
   ra: RAJ2000
   dec: DEJ2000
   id: objID
+  test_ra_deg: 271.087458
+  test_dec_deg: -29.519139
 Panstarrs_r_dr1:
   vizier_id: II/349
   mag: rKmag
@@ -75,87 +95,113 @@ Panstarrs_r_dr1:
   ra: RAJ2000
   dec: DEJ2000
   id: objID
+  test_ra_deg: 271.087458
+  test_dec_deg: -29.519139
 Panstarrs_i_dr1:
   vizier_id: II/349
   mag: iKmag
-  mag_error: i_rKmag
+  mag_error: e_iKmag
   ra: RAJ2000
   dec: DEJ2000
   id: objID
+  test_ra_deg: 271.087458
+  test_dec_deg: -29.519139
 Panstarrs_z_dr1:
   vizier_id: II/349
   mag: zKmag
-  mag_error: z_rKmag
+  mag_error: e_zKmag
   ra: RAJ2000
   dec: DEJ2000
   id: objID
+  test_ra_deg: 271.087458
+  test_dec_deg: -29.519139
 Panstarrs_y_dr1:
   vizier_id: II/349
   mag: yKmag
-  mag_error: y_rKmag
+  mag_error: e_yKmag
   ra: RAJ2000
   dec: DEJ2000
   id: objID
+  test_ra_deg: 271.087458
+  test_dec_deg: -29.519139
 SDSSS_i_dr12:
   vizier_id: V/147
   mag: iPmag
-  mag_error: e_IPmag
+  mag_error: e_iPmag
   ra: RA_ICRS
-  dec: DE_ICRC
+  dec: DE_ICRS
   id: objID
+  test_ra_deg: 114.6184167
+  test_dec_deg: 21.5542611
 SDSSS_r_dr12:
   vizier_id: V/147
   mag: rPmag
   mag_error: e_rPmag
   ra: RA_ICRS
-  dec: DE_ICRC
+  dec: DE_ICRS
   id: objID
+  test_ra_deg: 114.6184167
+  test_dec_deg: 21.5542611
 SDSSS_u_dr12:
   vizier_id: V/147
   mag: uPmag
   mag_error: e_uPmag
   ra: RA_ICRS
-  dec: DE_ICRC
+  dec: DE_ICRS
   id: objID
+  test_ra_deg: 114.6184167
+  test_dec_deg: 21.5542611
 SDSSS_z_dr12:
   vizier_id: V/147
-  mag: izmag
+  mag: zPmag
   mag_error: e_zPmag
   ra: RA_ICRS
-  dec: DE_ICRC
+  dec: DE_ICRS
   id: objID
+  test_ra_deg: 114.6184167
+  test_dec_deg: 21.5542611
 DES_g_dr1:
   vizier_id: II/357
   mag: gmag
   mag_error: e_gmag
-  ra: RA_ICRS
-  dec: DE_ICRC
+  ra: RAJ2000
+  dec: DEJ2000
   id: DES
+  test_ra_deg: 13.2022917
+  test_dec_deg: -26.5824528
 DES_r_dr1:
   vizier_id: II/357
   mag: rmag
-  mag_error: r_gmag
-  ra: RA_ICRS
-  dec: DE_ICRC
+  mag_error: e_rmag
+  ra: RAJ2000
+  dec: DEJ2000
   id: DES
+  test_ra_deg: 13.1889583
+  test_dec_deg: -26.5816889
 DES_i_dr1:
   vizier_id: II/357
   mag: imag
-  mag_error: i_gmag
-  ra: RA_ICRS
-  dec: DE_ICRC
+  mag_error: e_imag
+  ra: RAJ2000
+  dec: DEJ2000
   id: DES
+  test_ra_deg: 13.1889583
+  test_dec_deg: -26.5816889
 DES_z_dr1:
   vizier_id: II/357
   mag: zmag
-  mag_error: z_gmag
-  ra: RA_ICRS
-  dec: DE_ICRC
+  mag_error: e_zmag
+  ra: RAJ2000
+  dec: DEJ2000
   id: DES
+  test_ra_deg: 13.1889583
+  test_dec_deg: -26.5816889
 DES_y_dr1:
   vizier_id: II/357
-  mag: ymag
-  mag_error: y_gmag
-  ra: RA_ICRS
-  dec: DE_ICRC
+  mag: Ymag
+  mag_error: e_Ymag
+  ra: RAJ2000
+  dec: DEJ2000
   id: DES
+  test_ra_deg: 13.1889583
+  test_dec_deg: -26.5816889
