--- a/.github/workflows/conda_install.yml
+++ b/.github/workflows/conda_install.yml
@@ -1,21 +1,27 @@
-name: Conda Install test MacOS
+name: Conda install
 
 on:
   push:
     branches: main
 
-jobs:
-  runs-on: ubuntu-latest
 
+jobs:
+  build:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ['2.7', '3.6', '3.7', '3.8', 'pypy-2.7', 'pypy-3.6']
+        exclude:
+          - os: macos-latest
+            python-version: '3.8'
+          - os: windows-latest
+            python-version: '3.6'
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python 3.8
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.8'
-            - name: Install dependencies
-              run: |
-                python -m pip install --upgrade pip
-                conda env create -f environment.yml
-                conda activate blast
-                pip install -r app/requirements.txt
+          python-version: ${{ matrix.python-version }}
+      - name: Display Python version
+        run: python -c "import sys; print(sys.version)"
