--- a/.github/workflows/conda_install.yml
+++ b/.github/workflows/conda_install.yml
@@ -17,3 +17,4 @@ jobs:
       - name: Display Python version
         run: |
           $CONDA/bin/conda env update --file environment.yml --name base
+          conda activate
