--- a/.github/workflows/conda_install.yml
+++ b/.github/workflows/conda_install.yml
@@ -18,3 +18,4 @@ jobs:
         run: |
           $CONDA/bin/conda env update --file environment.yml --name base
           python -m pip install --upgrade pip
+          pip install -r app/requirements.txt
