--- a/.github/workflows/conda_install.yml
+++ b/.github/workflows/conda_install.yml
@@ -19,3 +19,4 @@ jobs:
           $CONDA/bin/conda env update --file environment.yml --name base
           python -m pip install --upgrade pip
           pip install -r app/requirements.txt
+          conda list
