--- a/.github/workflows/conda_install.yml
+++ b/.github/workflows/conda_install.yml
@@ -14,9 +14,9 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.8'
+      - uses: s-weigand/setup-conda@v1
       - name: Display Python version
         run: |
-          $CONDA/bin/conda env update --file environment.yml --name base
           python -m pip install --upgrade pip
           pip install -r app/requirements.txt
           conda list
