--- a/.github/workflows/conda_install.yml
+++ b/.github/workflows/conda_install.yml
@@ -20,3 +20,4 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r app/requirements.txt
           conda list
+          python --version
