--- a/.github/workflows/conda_install.yml
+++ b/.github/workflows/conda_install.yml
@@ -17,7 +17,5 @@ jobs:
       - uses: s-weigand/setup-conda@v1
       - name: Display Python version
         run: |
-          python -m pip install --upgrade pip
-          pip install -r app/requirements.txt
-          conda list
-          python --version
+          $CONDA/bin/conda env update --file environment.yml --name base
+          conda env list
