--- a/.github/workflows/conda_install.yml
+++ b/.github/workflows/conda_install.yml
@@ -17,4 +17,6 @@ jobs:
       - name: Display Python version
         run: |
           $CONDA/bin/conda env update --file environment.yml --name base
-          conda info --envs
+          python -m pip install --upgrade pip
+          pip install -r app/requirements.txt
+
