--- a/.github/workflows/conda_install.yml
+++ b/.github/workflows/conda_install.yml
@@ -6,8 +6,10 @@ on:
 
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python
