conda install workflow

--- a/.github/workflows/conda_install.yml
+++ b/.github/workflows/conda_install.yml
@@ -6,10 +6,11 @@ on:
 
 
 jobs:
-  runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest]
+  build:
+    runs-on: ${{ matrix.os }}
+      strategy:
+        matrix:
+          os: [ubuntu-latest, macos-latest]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python
