--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,6 +1,9 @@
+alabaster==0.7.12
 asgiref==3.4.1
+astro-prospector==1.0.0
 astropy==5.0
 astroquery==0.4.4
+Babel==2.9.1
 beautifulsoup4==4.10.0
 bokeh==2.4.2
 certifi==2021.10.8
@@ -8,12 +11,17 @@ charset-normalizer==2.0.8
 cycler==0.11.0
 DateTime==4.3
 Django==3.2.9
+docutils==0.17.1
 fonttools==4.28.2
+furo==2021.11.23
+h5py==3.6.0
 html5lib==1.1
 idna==3.3
+imagesize==1.3.0
 imbalanced-learn==0.8.1
 imblearn==0.0
 importlib-metadata==4.8.2
+install==1.3.5
 Jinja2==3.0.3
 joblib==1.1.0
 joypy==0.2.5
@@ -29,6 +37,7 @@ photutils==1.2.0
 Pillow==8.4.0
 pip==21.3.1
 pyerfa==2.0.0.1
+Pygments==2.10.0
 pyparsing==3.0.6
 python-dateutil==2.8.2
 pytz==2021.3
@@ -43,7 +52,16 @@ setuptools==59.4.0
 setuptools-scm==6.3.2
 six==1.16.0
 sklearn==0.0
+snowballstemmer==2.2.0
 soupsieve==2.3.1
+Sphinx==4.3.2
+sphinx-rtd-theme==1.0.0
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
 sqlparse==0.4.2
 threadpoolctl==3.0.0
 tomli==1.2.2
