--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -22,10 +22,12 @@ Django==3.2.9
 django-celery-beat==2.2.1
 django-timezone-field==4.2.3
 docutils==0.17.1
+flower==1.0.0
 fonttools==4.28.2
 furo==2021.11.23
 h5py==3.6.0
 html5lib==1.1
+humanize==3.13.1
 idna==3.3
 imagesize==1.3.0
 imbalanced-learn==0.8.1
@@ -47,6 +49,7 @@ pandas==1.3.4
 photutils==1.2.0
 Pillow==8.4.0
 pip==21.3.1
+prometheus-client==0.13.0
 prompt-toolkit==3.0.24
 pyerfa==2.0.0.1
 Pygments==2.10.0
@@ -68,6 +71,7 @@ sklearn==0.0
 snowballstemmer==2.2.0
 soupsieve==2.3.1
 Sphinx==4.3.2
+sphinx-copybutton==0.4.0
 sphinx-rtd-theme==1.0.0
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
