--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -20,6 +20,7 @@ cycler==0.11.0
 DateTime==4.3
 Django==3.2.9
 django-celery-beat==2.2.1
+django-crispy-forms==1.14.0
 django-timezone-field==4.2.3
 docutils==0.17.1
 flower==1.0.0
