nearly got docker working

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -12,14 +12,14 @@ WORKDIR /app
 COPY requirements.txt /app
 RUN pip3 install -r requirements.txt
 
-FROM base as src
+#FROM base as src
 COPY . /app
 
-FROM src as test
-COPY requirements.txt /app
-RUN pip3 install -r requirements.txt
-RUN python3 manage.py test host.tests -v 2
+#FROM src as test
+#COPY requirements.txt /app
+#RUN pip3 install -r requirements.txt
+#RUN python3 manage.py test host.tests -v 2
 
-FROM src as prod
-ENTRYPOINT ["python3"]
-CMD ["manage.py", "runserver", "0.0.0.0:8000"]
+#FROM src as prod
+#ENTRYPOINT ["python3"]
+#CMD ["manage.py", "runserver", "0.0.0.0:8000"]
