--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,14 @@ services:
     build:
       context: .
     command: >
-      sh -c "rm db.sqlite3
+      sh -c "rm db.sqlite3 &&
+
              python manage.py makemigrations &&
              python manage.py migrate &&
              python manage.py loaddata setup_survey_data.yaml &&
              python manage.py loaddata setup_filter_data.yaml &&
              python manage.py loaddata setup_catalog_data.yaml &&
+             python manage.py loaddata setup_test_transient.yaml &&
              python manage.py runserver 0.0.0.0:8000"
     ports:
       - "8000:8000"
