--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,7 @@ services:
     build:
       context: .
     command: >
-      sh -c "rm db.sqlite3 &&
-
-             python manage.py makemigrations &&
+      sh -c "python manage.py makemigrations &&
              python manage.py migrate &&
              python manage.py loaddata setup_survey_data.yaml &&
              python manage.py loaddata setup_filter_data.yaml &&
@@ -51,6 +49,15 @@ services:
       - celery
     env_file:
       - ./env/.env.dev
+  database:
+    image: mysql:8.0
+    restart: always
+    env_file:
+      - ./env/.env.dev
+    volumes:
+      - .dbdata:/var/lib/mysql/
+    ports:
+      - "33066:3306"
 
 
 
