--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,11 +1,15 @@
-FROM python:3.8-slim-buster
+FROM python:3.8
 
 ENV PYTHONUNBUFFERED 1
 
-COPY ./app/requirements.txt /requirements.txt
+COPY ./requirements.txt /requirements.txt
+#RUN apt-get update
+#RUN apt-get install -y --no-install-recommends gcc libc-dev python3-dev default-libmysqlclient-dev
+#RUN apt-get install -y gcc
+#RUN apt-get -y install default-libmysqlclient-dev
 RUN pip install -r /requirements.txt
 RUN mkdir /app
-COPY ./app /app
+COPY . /app
 WORKDIR /app
 
 
