--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,10 @@ version: '3.8'
 
 services:
   app:
+    restart: always
     build:
-      context: .
-    command: >
-      sh -c "python manage.py makemigrations &&
-             python manage.py migrate &&
-             python manage.py loaddata setup_survey_data.yaml &&
-             python manage.py loaddata setup_filter_data.yaml &&
-             python manage.py loaddata setup_catalog_data.yaml &&
-             python manage.py loaddata setup_test_transient.yaml &&
-             python manage.py runserver 0.0.0.0:8000"
+      context: ./app/
+    command: bash docker-entrypoint.sh
     ports:
       - "8000:8000"
     volumes:
@@ -21,8 +15,8 @@ services:
   celery:
     restart: always
     build:
-      context: .
-    command: celery -A app worker -l ERROR
+      context: ./app/
+    command: celery -A app worker -l ERROR --max-memory-per-child 12000
     volumes:
       - ./app:/app
     depends_on:
@@ -39,7 +33,7 @@ services:
   celery_beat:
     restart: always
     build:
-      context: .
+      context: ./app/
     command: celery -A app beat -l INFO
     volumes:
       - ./app:/app
@@ -51,13 +45,14 @@ services:
       - ./env/.env.dev
   database:
     image: mysql:8.0
+    command: --default-authentication-plugin=mysql_native_password
     restart: always
     env_file:
       - ./env/.env.dev
     volumes:
       - .dbdata:/var/lib/mysql/
     ports:
-      - "33066:3306"
+      - "3306:3306"
 
 
 
