added docs build workflow and started to get ngix working

--- a/env/.env.dev.example
+++ b/env/.env.dev.example
@@ -3,4 +3,12 @@ TNS_BOT_API_KEY=
 TNS_BOT_ID=
 TNS_BOT_NAME=
 
+# MySQL Database
+MYSQL_DATABASE =
+#MYSQL_USER =
+#MYSQL_PASSWORD =
+MYSQL_ROOT_PASSWORD =
 
+# Django
+DJANGO_SECRET_KEY =
+DJANGO_DEBUG =
