--- a/.github/workflows/docs-build.yml
+++ b/.github/workflows/docs-build.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: pip install -r app/requirments.txt
+      - run: pip install -r app/requirements.txt
       - run: cd docs/
       - run: make html
 
