--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,11 +1,15 @@
-upstream django {
-    server web:8000;
+upstream app {
+	server app:8000;
 }
 
 server {
-    listen 80;
+	listen 80;
 
-    location \ {
-        proxy_pass http//web;
-    }
+	location / {
+		proxy_pass http://app/;
+	}
+
+	location /static/ {
+		alias /static/;
+	}
 }
