--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,14 @@ services:
       - "8000:8000"
     volumes:
       - ./app:/app
-      - ./static:/static
+      - ./cutout_cdn:/cutout_cdn
     env_file:
       - ./env/.env.dev
   celery:
     restart: always
     build:
       context: ./app/
-    command: celery -A app worker -l ERROR --max-memory-per-child 12000
+    command: celery -A app worker -l INFO --max-memory-per-child 12000
     volumes:
       - ./app:/app
     depends_on:
