sorted out test envirnoment wit databse

--- a/app/host/fixtures/setup_status.yaml
+++ b/app/host/fixtures/setup_status.yaml
@@ -18,12 +18,12 @@
   fields:
     message: no match
     type: error
-- model: host.TaskProcessingStatus
+- model: host.TaskRegister
   fields:
     task: [Host match]
     transient: [2022bov]
     status: [not processed]
-- model: host.TaskProcessingStatus
+- model: host.TaskRegister
   fields:
     task: [Cutout Download]
     transient: [2022bov]
