--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,27 +14,27 @@ repos:
   rev: v1.7.0
   hooks:
   -   id: reorder-python-imports
-- repo: https://gitlab.com/pycqa/flake8
-  rev: '3.7.7'
-  hooks:
-  - id: flake8
-    args: ["--config=setup.cfg"]
-    language_version: python3
-- repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v0.812
-  hooks:
-  - id: mypy
-    name: Run type checks
-    args: ["--ignore-missing-imports"]
-- repo: https://github.com/pycqa/pydocstyle
-  rev: 5.0.2
-  hooks:
-  - id: pydocstyle
-- repo: local
-  hooks:
-  - id: migrations-check
-    language: system
-    name: Check for uncreated migrations.
-    entry: bash -c "./manage.py makemigrations --check --dry-run"
-    types: ["python"]
-    pass_filenames: false
+#- repo: https://gitlab.com/pycqa/flake8
+#  rev: '3.7.7'
+#  hooks:
+#  - id: flake8
+#    args: ["--config=setup.cfg"]
+#    language_version: python3
+#- repo: https://github.com/pre-commit/mirrors-mypy
+#  rev: v0.812
+#  hooks:
+#  - id: mypy
+#    name: Run type checks
+#    args: ["--ignore-missing-imports"]
+#- repo: https://github.com/pycqa/pydocstyle
+#  rev: 5.0.2
+#  hooks:
+#  - id: pydocstyle
+#- repo: local
+#  hooks:
+#  - id: migrations-check
+#    language: system
+#    name: Check for uncreated migrations.
+#    entry: bash -c "./manage.py makemigrations --check --dry-run"
+#    types: ["python"]
+#    pass_filenames: false
