updated readme to include pre commit badge

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -51,7 +51,7 @@ services:
     env_file:
       - ../env/.env.dev
     volumes:
-      - ..data/database/:/var/lib/mysql/
+      - ../data/database/:/var/lib/mysql/
     ports:
       - "3306:3306"
   nginx:
