--- a/docker/docker-compose.github_actions.yml
+++ b/docker/docker-compose.github_actions.yml
@@ -14,7 +14,7 @@ services:
   database:
     image: mysql:8.0
     environment:
-      - "MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD"
+      - "MYSQL_ROOT_PASSWORD"
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     volumes:
