fixed env variables in gh actions

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -10,7 +10,5 @@ jobs:
     environment: continuous intergration
     steps:
       - uses: actions/checkout@v2
-      - name: docker compose
-        run: |
-            echo "$MYSQL_ROOT_PASSWORD"
-            bash run_blast_tests.github_actions.sh
+      - name: docker compose up
+        run: bash run_blast_tests.github_actions.sh
