--- a/docker/docker-compose.github_actions.yml
+++ b/docker/docker-compose.github_actions.yml
@@ -5,7 +5,7 @@ services:
     restart: on-failure
     build:
       context: ../app/
-    command: bash docker-entrypoint.test.sh
+    command: bash entrypoints/docker-entrypoint.app.test.sh
     ports:
       - "8000:8000"
     volumes:
