--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -12,4 +12,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: docker compose up
-        run: bash run_blast_tests.github_actions.sh
+        run: bash blast.tests.github_actions.sh
